syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.asterlsker.housepit.grpc";

package auth;

service AuthService {
  rpc SignIn(SignInRequest) returns (SignInResponse){};
  rpc Link(LinkRequest) returns (google.protobuf.Empty){};
  rpc SignOut(SignOutRequest) returns (google.protobuf.Empty){};
  rpc Decode(DecodeRequest) returns(DecodeResponse){};
  rpc Refresh(RefreshRequest) returns (RefreshResponse){};
  rpc SaveCertification(SaveCertificationRequest) returns (google.protobuf.Empty){};
  rpc UpdateMember(UpdateMemberRequest) returns (google.protobuf.Empty){};
  rpc LookupMember(LookupMemberRequest) returns (LookupMemberResponse){};
}
// SignIn
message SignInRequest {
  Provider provider = 1;
  string id_token = 2;
}
message SignInResponse {
  SignInStatus status = 1;
  string access_token = 2;
  string refresh_token = 3;
  string accessTokenExpiredAt = 4;
  string refreshTokenExpiredAt = 5;
}
// Link
message LinkRequest{
  string access_token = 1;
  Provider provider = 2;
  string id_token = 3;
}
// SignOut
message SignOutRequest {
  string access_token = 1;
}
// Decode
message DecodeRequest{
  string access_token = 1;
}
message DecodeResponse{
  string member_id = 1;
}
// Refresh
message RefreshRequest{
  string refresh_token = 1;
}
message RefreshResponse{
  string access_token = 1;
  string refresh_token = 2;
  string accessTokenExpiredAt = 3;
  string refreshTokenExpiredAt = 4;
}
// Save Certification
message SaveCertificationRequest {
  string phone = 1;
  string ci = 2;
  string access_token = 3;
}
// Update Member
message UpdateMemberRequest {
  string user_name = 1;
  string access_token = 2;
}
// Update Member
message LookupMemberRequest {
  string member_id = 1;
  string access_token = 2;
}
// Lookup Member
message LookupMemberResponse {
  string member_id = 1;
  string user_name = 2;
}
// Enums
enum Provider {
  GOOGLE = 0;
  APPLE = 1;
  KAKAO = 2;
  NAVER = 3;
}

enum SignInStatus {
  NEW = 0;
  EXIST = 1;
}
